<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f1_black">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/f1_red"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textColor="@color/f1_white"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="@string/btn_play"
        android:textSize="16sp"
        android:backgroundTint="@color/f1_red"
        android:textColor="@color/f1_white"
        android:onClick="onPlayClicked"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <Button
        android:id="@+id/btn_championship"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:text="@string/btn_championship"
        android:textSize="14sp"
        android:backgroundTint="@color/f1_dark_grey"
        android:textColor="@color/f1_white"
        android:onClick="onChampionshipClicked"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

    <Button
        android:id="@+id/btn_remove_ads"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/btn_remove_ads"
        android:textSize="13sp"
        android:backgroundTint="@color/f1_gold"
        android:textColor="@color/f1_black"
        android:onClick="onRemoveAdsClicked"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_championship" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v3.0"
        android:textColor="@color/f1_dark_grey"
        android:textSize="11sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
